# test_motion_pepper

./: CMakeLists.txt  README.md  package.xml
include/: test_motion_pepper.h
launch/: pbvs_arm_servo_right.launch  test.launch
src/: main.cpp  test_motion_pepper.cpp  test_motion_pepper.cpp.autosave
